@@ -80,7 +80,7 @@ getPriority() {
 }
 
 void
-rrToWire(DataByteOutputStream out, Compression c) throws IOException {
+rrToWire(DataByteOutputStream out, Compression c) {
 	if (target == null)
 		return;
 
@@ -92,7 +92,7 @@ rrToWire(DataByteOutputStream out, Compression c) throws IOException {
 }
 
 void
-rrToWireCanonical(DataByteOutputStream out) throws IOException {
+rrToWireCanonical(DataByteOutputStream out) {
 	if (target == null)
 		return;
 
