@@ -114,7 +114,7 @@ getBitmap() {
 }
 
 void
-rrToWire(DataByteOutputStream out, Compression c) throws IOException {
+rrToWire(DataByteOutputStream out, Compression c) {
 	if (next == null)
 		return;
 
@@ -130,7 +130,7 @@ rrToWire(DataByteOutputStream out, Compression c) throws IOException {
 }
 
 void
-rrToWireCanonical(DataByteOutputStream out) throws IOException {
+rrToWireCanonical(DataByteOutputStream out) {
 	if (next == null)
 		return;
 
