@@ -144,7 +144,7 @@ getFlags() {
 }
 
 void
-rrToWire(DataByteOutputStream out, Compression c) throws IOException {
+rrToWire(DataByteOutputStream out, Compression c) {
 	if (options == null)
 		return;
 	Iterator it = options.keySet().iterator();
@@ -154,13 +154,14 @@ rrToWire(DataByteOutputStream out, Compression c) throws IOException {
 		out.writeShort(key);
 		byte [] data = (byte []) options.get(i);
 		out.writeShort(data.length);
-		out.write(data);
+		out.writeArray(data);
 	}
 }
 
 void
-rrToWireCanonical(DataByteOutputStream out) throws IOException {
-	throw new IOException("An OPT should never be converted to canonical");
+rrToWireCanonical(DataByteOutputStream out) {
+	throw new RuntimeException
+			("An OPT should never be converted to canonical");
 }
 
 }
