@@ -96,7 +96,7 @@ getTextDomain() {
 }
 
 void
-rrToWire(DataByteOutputStream out, Compression c) throws IOException {
+rrToWire(DataByteOutputStream out, Compression c) {
 	if (mailbox == null || textDomain == null)
 		return;
 
@@ -105,7 +105,7 @@ rrToWire(DataByteOutputStream out, Compression c) throws IOException {
 }
 
 void
-rrToWireCanonical(DataByteOutputStream out) throws IOException {
+rrToWireCanonical(DataByteOutputStream out) {
 	if (mailbox == null || textDomain == null)
 		return;
 
