@@ -133,7 +133,7 @@ getTarget() {
 }
 
 void
-rrToWire(DataByteOutputStream out, Compression c) throws IOException {
+rrToWire(DataByteOutputStream out, Compression c) {
 	if (target == null)
 		return;
 
@@ -144,7 +144,7 @@ rrToWire(DataByteOutputStream out, Compression c) throws IOException {
 }
 
 void
-rrToWireCanonical(DataByteOutputStream out) throws IOException {
+rrToWireCanonical(DataByteOutputStream out) {
 	if (target == null)
 		return;
 
